class Tweet {
    constructor(content) {
        this.content = content;
    }
}

module.exports = Tweet;
